; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/ipc/extr_ipc_voucher.c_mach_voucher_attr_command.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/ipc/extr_ipc_voucher.c_mach_voucher_attr_command.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 (%struct.TYPE_5__*, i32, i32*, i32, i32, i32, i32, i32, i32*)* }

@MACH_VOUCHER_ATTR_VALUE_MAX_NESTED = common dso_local global i32 0, align 4
@IV_NULL = common dso_local global i64 0, align 8
@KERN_INVALID_ARGUMENT = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4
@IVAM_NULL = common dso_local global %struct.TYPE_5__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mach_voucher_attr_command(i64 %0, i32 %1, i32 %2, i32 %3, i32 %4, i32 %5, i32* %6) #0 {
  %8 = alloca i32, align 4
  %9 = alloca i64, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32*, align 8
  %16 = alloca i8*, align 8
  %17 = alloca i64, align 8
  %18 = alloca i32, align 4
  %19 = alloca %struct.TYPE_5__*, align 8
  %20 = alloca i32, align 4
  %21 = alloca i32, align 4
  %22 = alloca i32, align 4
  %23 = alloca i32, align 4
  %24 = alloca i32, align 4
  store i64 %0, i64* %9, align 8
  store i32 %1, i32* %10, align 4
  store i32 %2, i32* %11, align 4
  store i32 %3, i32* %12, align 4
  store i32 %4, i32* %13, align 4
  store i32 %5, i32* %14, align 4
  store i32* %6, i32** %15, align 8
  %25 = load i32, i32* @MACH_VOUCHER_ATTR_VALUE_MAX_NESTED, align 4
  %26 = zext i32 %25 to i64
  %27 = call i8* @llvm.stacksave()
  store i8* %27, i8** %16, align 8
  %28 = alloca i32, i64 %26, align 16
  store i64 %26, i64* %17, align 8
  %29 = load i64, i64* @IV_NULL, align 8
  %30 = load i64, i64* %9, align 8
  %31 = icmp eq i64 %29, %30
  br i1 %31, label %32, label %34

32:                                               ; preds = %7
  %33 = load i32, i32* @KERN_INVALID_ARGUMENT, align 4
  store i32 %33, i32* %8, align 4
  store i32 1, i32* %24, align 4
  br label %67

34:                                               ; preds = %7
  %35 = load i32, i32* %10, align 4
  %36 = call i32 @iv_key_to_index(i32 %35)
  store i32 %36, i32* %22, align 4
  %37 = load i32, i32* %22, align 4
  %38 = load i32, i32* @TRUE, align 4
  %39 = call i32 @ivgt_lookup(i32 %37, i32 %38, %struct.TYPE_5__** %19, i32* %20)
  %40 = load %struct.TYPE_5__*, %struct.TYPE_5__** @IVAM_NULL, align 8
  %41 = load %struct.TYPE_5__*, %struct.TYPE_5__** %19, align 8
  %42 = icmp eq %struct.TYPE_5__* %40, %41
  br i1 %42, label %43, label %45

43:                                               ; preds = %34
  %44 = load i32, i32* @KERN_INVALID_ARGUMENT, align 4
  store i32 %44, i32* %8, align 4
  store i32 1, i32* %24, align 4
  br label %67

45:                                               ; preds = %34
  %46 = load i64, i64* %9, align 8
  %47 = load i32, i32* %22, align 4
  %48 = call i32 @iv_lookup(i64 %46, i32 %47)
  store i32 %48, i32* %21, align 4
  %49 = load i32, i32* %22, align 4
  %50 = load i32, i32* %21, align 4
  %51 = call i32 @ivace_lookup_values(i32 %49, i32 %50, i32* %28, i32* %18)
  %52 = load %struct.TYPE_5__*, %struct.TYPE_5__** %19, align 8
  %53 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %52, i32 0, i32 0
  %54 = load i32 (%struct.TYPE_5__*, i32, i32*, i32, i32, i32, i32, i32, i32*)*, i32 (%struct.TYPE_5__*, i32, i32*, i32, i32, i32, i32, i32, i32*)** %53, align 8
  %55 = load %struct.TYPE_5__*, %struct.TYPE_5__** %19, align 8
  %56 = load i32, i32* %10, align 4
  %57 = load i32, i32* %18, align 4
  %58 = load i32, i32* %11, align 4
  %59 = load i32, i32* %12, align 4
  %60 = load i32, i32* %13, align 4
  %61 = load i32, i32* %14, align 4
  %62 = load i32*, i32** %15, align 8
  %63 = call i32 %54(%struct.TYPE_5__* %55, i32 %56, i32* %28, i32 %57, i32 %58, i32 %59, i32 %60, i32 %61, i32* %62)
  store i32 %63, i32* %23, align 4
  %64 = load i32, i32* %20, align 4
  %65 = call i32 @ivac_release(i32 %64)
  %66 = load i32, i32* %23, align 4
  store i32 %66, i32* %8, align 4
  store i32 1, i32* %24, align 4
  br label %67

67:                                               ; preds = %45, %43, %32
  %68 = load i8*, i8** %16, align 8
  call void @llvm.stackrestore(i8* %68)
  %69 = load i32, i32* %8, align 4
  ret i32 %69
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @iv_key_to_index(i32) #2

declare dso_local i32 @ivgt_lookup(i32, i32, %struct.TYPE_5__**, i32*) #2

declare dso_local i32 @iv_lookup(i64, i32) #2

declare dso_local i32 @ivace_lookup_values(i32, i32, i32*, i32*) #2

declare dso_local i32 @ivac_release(i32) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
